--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,35 @@ nav {
     border-radius: 50%;
 }
 
-.display {
+.products {
+    padding: 0 20px;
+}
+
+.our-books {
+    text-align: center;
+}
+
+.products-container {
     display: flex;
     flex-wrap: wrap;
+}
+
+.product-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+}
+
+.product-img {
+    height: 200px;    
+}
+
+.author, .price {
+    font-size: 0.85rem;
+    text-align: center;
+}
+
+.card-buttons-wrapper {
+    display: flex;
+    justify-content: space-between;
 }
