--- a/styles.css
+++ b/styles.css
@@ -61,13 +61,14 @@ nav {
     height: 20px;
     background-color: red;
     border-radius: 50%;
+    font-size: 0.8rem;
 }
 
 .products {
     padding: 15px 20px;
 }
 
-.our-books {
+.our-books, .shopping-bag-heading {
     text-align: center;
     margin-bottom: 15px;
 }
@@ -133,7 +134,7 @@ nav {
     justify-content: space-between;
 }
 
-.card-button, .popup-close {
+.card-button, .popup-close, .summary-btn {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -143,22 +144,30 @@ nav {
     box-shadow: 2px 2px 5px rgb(182, 179, 179); 
 }
 
-.show-more, .popup-close {
+.show-more, .popup-close, .confirm {
     background-color: antiquewhite;
     margin-right: 3px;
 }
 
-.show-more:hover, .popup-close:hover {
+.confirm {
+    margin-left: 3px;
+}
+
+.show-more:hover, .popup-close:hover, .confirm:hover {
     background-color: rgb(255, 245, 231);
     cursor: pointer;
 }
 
-.add-to-bag {
+.add-to-bag, .remove-all {
     background-color: tomato;
     margin-left: 3px;
 }
 
-.add-to-bag:hover {
+.remove-all {
+    margin-right: 3px;
+}
+
+.add-to-bag:hover, .remove-all:hover {
     background-color: rgb(253, 115, 91);
     cursor: pointer;
 }
@@ -203,7 +212,21 @@ nav {
     width: 30%;
 }
 
+/* shopping bag */
+.shopping-bag-section {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 126px);
+    padding: 15px 20px;
+}
 
+.shopping-bag-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;    
+}
 
 /* footer*/
 
