--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ nav {
     margin-right: 1rem;
 }
 
+.li-books, .li-shopping-bag {
+    cursor: pointer;
+}
+
 .shopping-bag-wrapper {
     margin-right: 1.25rem;
     display: inline-block;
@@ -65,6 +69,7 @@ nav {
 }
 
 .products {
+    flex-direction: column;
     padding: 15px 20px;
 }
 
@@ -214,7 +219,7 @@ nav {
 
 /* shopping bag */
 .shopping-bag-section {
-    display: flex;
+    display: none;
     flex-direction: column;
     min-height: calc(100vh - 126px);
     padding: 15px 20px;
@@ -226,6 +231,22 @@ nav {
     align-items: center;
     justify-content: center;
     flex-grow: 1;    
+}
+
+.summary-wrapper {
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.total {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.summary-buttons-wrapper {
+    display: flex;
+    justify-content: space-between;
 }
 
 /* footer*/
@@ -264,4 +285,12 @@ footer {
 .github:active {
     color: tomato;
     text-decoration: none;
+}
+
+.hidden {
+    display: none;
+}
+
+.visible {
+    display: flex;
 }
